force-app/main/default/objects/Inventory__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract__c.RecordType.Id</field>
            <operation>equals</operation>
            <value>012b0000000cVJ3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>