force-app/main/default/objects/Inventory__c/fields/SupplierOrderNr__c.field-meta.xml
<CustomField>
    <fullName>SupplierOrderNr__c</fullName>
    <label>Supplier Order Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>