force-app/main/default/objects/Inventory__c/fields/TCSCardNr__c.field-meta.xml
<CustomField>
    <fullName>TCSCardNr__c</fullName>
    <label>TCS Card Nr.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>