force-app/main/default/objects/Inventory__c/fields/TCSInsured__c.field-meta.xml
<CustomField>
    <fullName>TCSInsured__c</fullName>
    <label>TCS Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>