force-app/main/default/objects/Inventory__c/fields/Toner3__c.field-meta.xml
<CustomField>
    <fullName>Toner3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toner 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Toner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory (Toner 3)</relationshipLabel>
    <relationshipName>Inventory4</relationshipName>
    <type>Lookup</type>
</CustomField>