force-app/main/default/objects/Inventory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Main Screen</fullName>
            </value>
            <value>
                <fullName>Second Screen</fullName>
            </value>
            <value>
                <fullName>Third Screen</fullName>
            </value>
            <value>
                <fullName>Company Use</fullName>
            </value>
            <value>
                <fullName>Private Use</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Personalized Card</fullName>
            </value>
            <value>
                <fullName>Unit Card</fullName>
            </value>
            <value>
                <fullName>Virtual Computer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>