force-app/main/default/objects/Inventory__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>012b0000000bub1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventory (User)</relationshipLabel>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>