force-app/main/default/objects/Inventory__c/fields/ValAvailableInApp__c.field-meta.xml
<CustomField>
    <fullName>ValAvailableInApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValAvailableInApp</label>
    <type>Checkbox</type>
</CustomField>