force-app/main/default/objects/Inventory__c/fields/ValidIUntilDate__c.field-meta.xml
<CustomField>
    <fullName>ValidIUntilDate__c</fullName>
    <label>Valid Until (Date)</label>
    <type>Date</type>
</CustomField>