force-app/main/default/objects/Inventory__c/fields/VulnerabilityHostList__c.field-meta.xml
<CustomField>
    <fullName>VulnerabilityHostList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vulnerability Host List</label>
    <type>Checkbox</type>
</CustomField>