force-app/main/default/objects/Inventory__c/fields/WarrantyDetails__c.field-meta.xml
<CustomField>
    <fullName>WarrantyDetails__c</fullName>
    <label>Warranty Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>