force-app/main/default/objects/Inventory__c/fields/WarrantyExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyExpirationDate__c</fullName>
    <label>Warranty (Expiration Date)</label>
    <type>Date</type>
</CustomField>