force-app/main/default/objects/Inventory__c/recordTypes/Accessories.recordType-meta.xml
<RecordType>
    <fullName>Accessories</fullName>
    <active>true</active>
    <label>Accessories</label>
</RecordType>