force-app/main/default/objects/Inventory__c/recordTypes/Badge.recordType-meta.xml
<RecordType>
    <fullName>Badge</fullName>
    <active>true</active>
    <label>Badge</label>
</RecordType>