force-app/main/default/objects/Inventory__c/recordTypes/BooksVH.recordType-meta.xml
<RecordType>
    <fullName>BooksVH</fullName>
    <active>true</active>
    <label>Books VH</label>
</RecordType>