force-app/main/default/objects/Inventory__c/recordTypes/Car.recordType-meta.xml
<RecordType>
    <fullName>Car</fullName>
    <active>true</active>
    <label>Car</label>
</RecordType>