force-app/main/default/objects/Inventory__c/recordTypes/Device.recordType-meta.xml
<RecordType>
    <fullName>Device</fullName>
    <active>true</active>
    <description>(IT) Notebook</description>
    <label>Device</label>
</RecordType>