force-app/main/default/objects/Inventory__c/recordTypes/Mobile.recordType-meta.xml
<RecordType>
    <fullName>Mobile</fullName>
    <active>true</active>
    <description>(HR) Smartphone, Tablet</description>
    <label>Mobile</label>
</RecordType>