force-app/main/default/objects/Inventory__c/recordTypes/Network.recordType-meta.xml
<RecordType>
    <fullName>Network</fullName>
    <active>true</active>
    <description>(IT) Switch, Access Point, Network Peripherie</description>
    <label>Network</label>
</RecordType>