force-app/main/default/objects/Inventory__c/recordTypes/Peripherie.recordType-meta.xml
<RecordType>
    <fullName>Peripherie</fullName>
    <active>true</active>
    <description>(IT) Screens, Docking, Headset, IT-Peripherie</description>
    <label>Peripherie</label>
</RecordType>