force-app/main/default/objects/Inventory__c/recordTypes/Printer.recordType-meta.xml
<RecordType>
    <fullName>Printer</fullName>
    <active>true</active>
    <description>(IT) Printer, Plotter, Scanner etc.</description>
    <label>Printer</label>
</RecordType>