force-app/main/default/objects/Inventory__c/recordTypes/Storage.recordType-meta.xml
<RecordType>
    <fullName>Storage</fullName>
    <active>true</active>
    <description>(IT) On-Premises Storage, NAS, Server</description>
    <label>Storage</label>
</RecordType>