force-app/main/default/objects/Inventory__c/recordTypes/Tablet.recordType-meta.xml
<RecordType>
    <fullName>Tablet</fullName>
    <active>true</active>
    <label>Tablet</label>
</RecordType>