force-app/main/default/objects/Inventory__c/recordTypes/Telephone.recordType-meta.xml
<RecordType>
    <fullName>Telephone</fullName>
    <active>true</active>
    <label>Telephone</label>
</RecordType>