force-app/main/default/objects/Inventory__c/recordTypes/Toner.recordType-meta.xml
<RecordType>
    <fullName>Toner</fullName>
    <active>true</active>
    <label>Toner</label>
</RecordType>