force-app/main/default/objects/Inventory__c/recordTypes/Workplace.recordType-meta.xml
<RecordType>
    <fullName>Workplace</fullName>
    <active>true</active>
    <description>Record Type to track workplaces via office management</description>
    <label>Workplace</label>
</RecordType>