force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
        <group>Skywalk_HR_Alle</group>
        <group>Skywalk_HR_OM</group>
    </sharedTo>
</ListView>