force-app/main/default/objects/Inventory__c/listViews/All_Badges.listView-meta.xml
<ListView>
    <fullName>All_Badges</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>Description__c</columns>
    <columns>BadgeNr__c</columns>
    <columns>HandoutDate__c</columns>
    <columns>ReturnedDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Badge</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Use</value>
    </filters>
    <label>All Badges</label>
</ListView>