force-app/main/default/objects/Inventory__c/listViews/All_Cars.listView-meta.xml
<ListView>
    <fullName>All_Cars</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>User__c</columns>
    <columns>Car__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CarCurrency__c</columns>
    <columns>DistanceCompensation__c</columns>
    <columns>Description__c</columns>
    <columns>ValAvailableInApp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Car</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ordered,In Use,Not Used,Broken,Stolen,In Home Office,Expired,Lost,Not Returned,Disposed,Returned,Storage</value>
    </filters>
    <label>All Cars</label>
</ListView>