force-app/main/default/objects/Inventory__c/listViews/All_Computers_All_OS_X.listView-meta.xml
<ListView>
    <fullName>All_Computers_All_OS_X</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>ClientName__c</columns>
    <columns>Model__c</columns>
    <columns>OperationSystemVersion__c</columns>
    <columns>Disk__c</columns>
    <columns>Memory__c</columns>
    <columns>PurchaseDate__c</columns>
    <columns>AgeMonths__c</columns>
    <columns>User__c</columns>
    <columns>Company__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Manufacturer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Device</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Virtual Computer</value>
    </filters>
    <filters>
        <field>Manufacturer__c</field>
        <operation>equals</operation>
        <value>Apple</value>
    </filters>
    <label>All Computers - macOS - All Devices</label>
    <language>en_US</language>
</ListView>