force-app/main/default/objects/Inventory__c/listViews/All_Credentials.listView-meta.xml
<ListView>
    <fullName>All_Credentials</fullName>
    <columns>NAME</columns>
    <columns>ApplicationService__c</columns>
    <columns>LicenseType__c</columns>
    <columns>LicenseKey__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Credentials</value>
    </filters>
    <label>All Credentials</label>
    <language>en_US</language>
</ListView>