force-app/main/default/objects/Inventory__c/listViews/All_Docking_Station.listView-meta.xml
<ListView>
    <fullName>All_Docking_Station</fullName>
    <columns>Status__c</columns>
    <columns>Condition__c</columns>
    <columns>Distributor__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>User__c</columns>
    <columns>Company__c</columns>
    <columns>HandoutDate__c</columns>
    <columns>ReturnedDate__c</columns>
    <columns>WarrantyDetails__c</columns>
    <columns>PurchaseDate__c</columns>
    <columns>PurchasePrice__c</columns>
    <columns>WarrantyExpirationDate__c</columns>
    <columns>SerialNr__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Accessories</value>
    </filters>
    <label>All Docking Station</label>
    <language>en_US</language>
</ListView>